fixed auth exception and added set device home keyboard
